--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "jxlwqq/quill": "^1.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "overtrue/laravel-lang": "^3.0"
+        "laravel/ui": "^2.0",
+        "overtrue/laravel-lang": "^3.0",
+        "socialiteproviders/weibo": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
