--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jenssegers/agent": "^2.6",
         "jxlwqq/quill": "^1.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "overtrue/laravel-lang": "^3.0",
-        "socialiteproviders/weibo": "^3.0"
+        "socialiteproviders/weibo": "^3.0",
+        "torann/geoip": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
